Apply the back-end changes of commit f8a145a to reproduce the evolution
